[package]
name = "extkube-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
kube = { version = "0.86.0", features = [] }
k8s-openapi = { version = "0.20.0", default-features = false, features = [
    "latest",
] }
clap = { version = "4.4.4", features = ["derive"] }
serde_yaml = "0.9.25"
tempfile = "3.8.0"
arboard = "3.2.1"
colored = "2.0.4"
